# esp32-minimal-uart-example

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
src/: main.rs
